[package]
name = "athena"
version = "0.1.0"
edition = "2024"

[dependencies]
aegis_athena_contracts = { git = "https://github.com/ARelaxedScholar/Aegis-Athena-Contracts" }
tonic = "0.13.0"
prost = "0.13.5"
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
rand = "0.9.0"
rayon = "1.10.0"

[build-dependencies]
tonic-build = "0.13.0"

